--- a/angular.json
+++ b/angular.json
@@ -24,6 +24,7 @@
           "builder": "@angular-devkit/build-angular:application",
           "options": {
             "outputPath": "dist/angular-cheatsheet",
+            "baseHref": "angularcheatsheet",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
